--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,25 @@
   "manifest_version": 2,
   "icons": {
     "128": "icon128.png"
+  },
+  "permissions": [
+    "activeTab",
+    "declarativeContent",
+    "storage"
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [
+    {
+      "run_at": "document_end",
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "options_page": "options.html",
+  "page_action": {
+    "default_popup": "options.html"
   }
 }
