--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,6 @@
   ],
   "options_page": "options.html",
   "page_action": {
-    "default_popup": "options.html"
+    "default_popup": "popup.html"
   }
 }
